2005-04-05 14:16  antirez

	* ChangeLog, jim-rlprompt-1.0.tcl: minor rlprompt fix.

2005-04-05 13:51  antirez

	* ChangeLog, Makefile, jim-readline.c, jim-rlprompt-1.0.tcl, jim.c,
	  jim.h, jimsh.c: .jimrc support (or jimrc.tcl). Minimal readline
	  extension, just enough to allow to the pure-Jim rlprompt
	  extension to provide a readline-aware interactive shell with
	  history.

2005-04-04 21:44  antirez

	* ChangeLog, README, jim.c: Fixed a memory leak introduced some day
	  ago.	Thanks to 'valgrind'.

2005-04-04 13:59  antirez

	* ChangeLog, jim-stdlib-1.0.tcl: [memoize] is now inside the Jim
	  Standard Library! More info here: http://wiki.tcl.tk/10981 Our
	  version uses a static var to take state instead of a global var,
	  for the rest it is the same.

2005-04-04 10:01  antirez

	* ChangeLog, jim.h: Version marked as "0.51".

2005-04-04 09:58  antirez

	* ChangeLog, Makefile, jim-stdlib-1.0.tcl, jim.c: Some change in
	  the standard library, a bug about [info body/args] fixed. some
	  commented work in progress for exposing the Jim parse at script
	  level. Default compilation set to -Os again.

2005-04-02 23:35  antirez

	* ChangeLog, Makefile, README, TODO, jim-sqlite.c,
	  doc/Sqlite-Extension.txt: Committed the sqlite extension and
	  documentation.

2005-04-02 12:14  antirez

	* ChangeLog, README, doc/AIO-Extension.txt: minor docs update

2005-04-02 12:08  antirez

	* ChangeLog, Makefile, jim-stdlib-1.0.tcl, jim.c: Added a very
	  immature start of a Jim standard library.

2005-04-02 11:09  antirez

	* ChangeLog, Makefile: Changes to Makefile to reflect that now
	  libraries must have the version in the .so/.dll filename.

2005-04-02 10:54  antirez

	* ChangeLog, jim.c: win32 opendir() and related compatibility API.

2005-04-02 09:48  antirez

	* ChangeLog, jim.c: fix for win32

2005-04-02 09:44  antirez

	* ChangeLog, Makefile, TODO, jim.c, jim.h: [package require] +
	  Makefile changes about libraries currently not working...
