@@ -1,3 +1,8 @@
+2005-04-05 14:18  antirez
+
+	* ChangeLog, jim.c, test.tcl: [scope] command removed. Will be
+	  added later with the [let] name and a bit different semantic.
+
 2005-04-05 14:16  antirez
 
 	* ChangeLog, jim-rlprompt-1.0.tcl: minor rlprompt fix.
